--- a/package.json
+++ b/package.json
@@ -24,5 +24,15 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"prettier": "^2.8.8"
-	}
+	},
+	"files": [
+		"build/**/*",
+		"CHANGELOG.md",
+		"includes/**/*",
+		"LICENSE.md",
+		"mapbox-for-wp.php",
+		"readme.txt",
+		"vendor",
+		"vendor_prefixed"
+	]
 }
